fix white space under the page

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -8,7 +8,7 @@ body {
 body, html {
   margin: 0;
   padding: 0;
-  height: 90%;
+  min-height: 100%;
 }
 
 .header {
